chore(ci): copy secrets

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Copy secrets
+          command: cp .circleci/secrets.yml app/src/main/res/values/secrets.xml
+      - run:
           name: Run Tests
           command: ./gradlew lint test
       - store_artifacts:
