--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".MainActivity"
-                android:label="@string/title_activity_maps">
+                android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
